# meshque-backend

./: .dockerignore  .env.development  .gitignore  Dockerfile  command.md  docker-compose-development.yml  docker-compose.yml  pyproject.toml
app/: manage.py
app/account/: models.py  serializers.py  urls.py  views.py
app/account/migrations/: 0001_initial.py
app/basket/: admin.py  models.py  serializers.py  urls.py  views.py
app/basket/migrations/: 0001_initial.py  0002_wishlist_wishlistitem.py
app/core/management/commands/: wait_for_db.py
app/meshque/: asgi.py  settings.py  urls.py  wsgi.py
app/product/: admin.py  filters.py  models.py  serializers.py  urls.py  views.py
app/product/migrations/: 0001_initial.py  0002_productimages.py  0003_rename_color_colorvariant_color_az_and_more.py  0004_rename_productimages_productimage.py  0005_alter_productimage_product.py  0006_alter_productimage_image_alter_productimage_product.py  0007_alter_productimage_image.py  0008_alter_productimage_product.py  0009_product_created_at.py  0010_alter_productimage_product.py  0011_product_discount_percentage.py
app/purchase/: filters.py  models.py  serializers.py  signals.py  urls.py  views.py
app/purchase/migrations/: 0001_initial.py
scripts/: run.sh
